--- a/blocks/elements/__item/elements__item.css
+++ b/blocks/elements/__item/elements__item.css
@@ -1,7 +1,7 @@
 .elements__item {
     background-color: #fff;
-    width: 282px;
-    height: 361px;
+    max-width: 282px;
+    min-height: 361px;
     overflow: hidden;
     border-radius: 10px;
 }
