--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,11 +2,12 @@
     display: flex;
     max-width: 880px;
     justify-content: flex-start;
-    border-bottom: 1px solid rgba(84, 84, 84, 1);
+    border-bottom: 1px solid rgba(84, 84, 84, .7);
     margin-top: 45px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0;
+    padding: 0;
 }
 
 @media screen and (max-width:905px) {
