--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,6 +1,6 @@
 .popup__close {
     border: none;
-    background-image: url(../../../../mesto/image/Close\ Icon.png);
+    background-image: url(../../../../mesto/image/Close\ Icon.svg);
     background-color: transparent;
     width: 32px;
     height: 32px;
@@ -21,5 +21,5 @@
 }
 
 .popup__close:hover {
-    opacity: .7;
+    opacity: .6;
 }
