--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,7 +3,7 @@
     width: 100%;
     border-radius: 10px;
     background-color: #FFFFFF;
-    box-shadow: 0px 0px 25px 0px #00000026;
+    box-shadow:  0 0 25px rgba(0,0,0,.15);
     padding-top: 34px;
     padding-bottom: 37px;
     padding-left: 36px;
