--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,8 @@
 .popup__input {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
-    width: 358px;
+    width:100%;
+    max-width:  358px;
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
@@ -14,6 +15,6 @@
 
 @media screen and (max-width:540px) {
     .popup__input {
-        width: 238px;
+        max-width: 238px;
     }
 }
