--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,5 @@
 .profile__add-button {
-    background-image: url(../../../../mesto/image/Vector\ \(3\).png);
+    background-image: url(../../../../mesto/image/add.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-color: #000;
@@ -27,5 +27,5 @@
 }
 
 .profile__add-button:hover {
-    opacity: .7;
+    opacity: .6;
 }
