--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button {
     grid-area: button;
     align-self: center;
-    background-image: url(../../../../mesto/image/карандаш.png);
+    background-image: url(../../../../mesto/image/pen.svg);
     background-repeat: no-repeat;
     background-position: center;
     width: 24px;
@@ -13,7 +13,7 @@
 }
 
 .profile__edit-button:hover {
-    opacity: 0.7;
+    opacity: .6;
 }
 
 @media screen and (max-width:600px) {
