--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,3 +5,8 @@
     margin-bottom: 67px;
     max-width: 880px;
 }
+@media screen and (max-width:600px) {
+    .elements {
+        margin-bottom: 48px;
+    }
+}
