--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,6 +4,8 @@
     line-height: 22px;
     text-align: left;
     color: #545454;
+    margin: 0;
+    padding: 0;
 }
 @media screen and (max-width:905px) {
     .footer__copyright {
