--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,10 +4,14 @@
     width: 142px;
     height: 33px;
     padding-bottom: 41px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
 }
 
 @media screen and (max-width:600px) {
     .header__logo {
+        padding-left: 27px;
         width: 104px;
         height: 24px;
         padding-bottom: 32px;
