--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,11 +2,15 @@
     width: 120px;
     height: 120px;
     margin-right: 30px;
+    margin-left: 0;
+    margin-bottom: 0;
     object-fit: cover;
+    padding: 0;
 }
 
 @media screen and (max-width:600px) {
     .profile__avatar {
+        margin-right: 0;
         padding-bottom: 26px;
     }
 }
