--- a/blocks/elements/__like-pic/elements__like-pic.css
+++ b/blocks/elements/__like-pic/elements__like-pic.css
@@ -1,6 +1,6 @@
 .elements__like-pic {
     background-color: #fff;
-    background-image: url(../../../../mesto/image/like.svg);
+    background-image: url(../../../image/like.svg);
     background-repeat: no-repeat;
     border: none;
     box-sizing: content-box;
@@ -11,7 +11,7 @@
 }
 
 .elements__like-pic:active {
-    background-image: url(../../../../mesto/image/like__black.svg);
+    background-image: url(../../../image/like__black.svg);
 }
 
 .elements__like-pic:hover {
