--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,5 @@
 .profile__add-button {
-    background-image: url(../../../../mesto/image/add.svg);
+    background-image: url(../../../image/add.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-color: #000;
