--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,6 +1,6 @@
 .popup__close {
     border: none;
-    background-image: url(../../../../mesto/image/Close\ Icon.svg);
+    background-image: url(../../../image/close__icon.svg);
     background-color: transparent;
     width: 32px;
     height: 32px;
