--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,8 +1,8 @@
 .popup__input {
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
-    width:100%;
-    max-width:  358px;
+    width: 100%;
+    max-width: 358px;
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
@@ -10,7 +10,7 @@
     padding-right: 0;
     padding-left: 0;
     padding-bottom: 13px;
-    margin: 0 auto;
+    margin-bottom: 30px;
 }
 
 @media screen and (max-width:540px) {
