--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button {
     grid-area: button;
     align-self: center;
-    background-image: url(../../../../mesto/image/pen.svg);
+    background-image: url(../../../image/pen.svg);
     background-repeat: no-repeat;
     background-position: center;
     width: 24px;
@@ -10,6 +10,7 @@
     background-color: #000;
     cursor: pointer;
     opacity: 1;
+    position: relative;
 }
 
 .profile__edit-button:hover {
