--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -3,10 +3,12 @@
     font-size: 42px;
     font-weight: 500;
     line-height: 48px;
-    text-align: left;
     padding: 0;
     margin: 0;
     white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 294px;
 }
 
 @media screen and (max-width:905px) {
